user report method added
